--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"zod-validation-error": "^3.4.1"
 	},
 	"dependencies": {
-		"@zachleat/heading-anchors": "^1.0.3"
+		"@zachleat/heading-anchors": "^1.0.3",
+		"netlify-plugin-cache": "^1.0.3"
 	}
 }
