GH Action build doesn't seem to be updating to honor the lack of pathprefix (it works locally too), so I'll try deactivating the cache (which I don't really need at this point since I'm not doing anything time-consuming.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
 	publish = "_site"
 	command = "npm run build"
 
-[[plugins]]
-package = "netlify-plugin-cache"
-
-  [plugins.inputs]
-  paths = [ ".cache" ]
+#[[plugins]]
+#package = "netlify-plugin-cache"
+#
+#  [plugins.inputs]
+#  paths = [ ".cache" ]
