--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@zachleat/heading-anchors": "^1.0.3",
+		"markdown-it-attrs": "^4.3.1",
 		"netlify-plugin-cache": "^1.0.3"
 	}
 }
